aws-ec2/k8s/groundswellPatch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groundswell
spec:
  template:
    spec:
      containers:
        - name: groundswell
...
