aws-ec2/k8s/platformPatch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron
spec:
  template:
    spec:
      containers:
        - name: cron
...
