aws-ec2/k8s/ingressPatch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tower-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: 'traefik'
